@@ -1,3 +1,7 @@
+26 September 2008
++ Added more ajax controls (add and delete) to the admin menu.
++ Updated: javascript/admin_link/
+
 10 Sept 2008
 + getTitle returns link without decoding it. needed to prevent
   breakage with quotation marks.
